# nRF5-SDK-for-Mesh

./: .gitmodules
CMake/sdk/: nRF5_SDK_15.0.0_a53641a.cmake
examples/: CMakeLists.txt
examples/common/src/: app_error_weak.c
examples/light_switch/server/: CMakeLists.txt  light_switch_server_nrf52832_xxAA_s132_6_0_0.emProject
examples/light_switch/server/include/: app_config.h
examples/light_switch/server/src/: main.c
examples/thingy/: CMakeLists.txt
examples/thingy/include/: app_config.h  mesh.h  mesh_ui.h  nrf_mesh_config_app.h  sdk_config.h  thingy_config.h
examples/thingy/linker/: nrf52832_xxAA_s132_6.0.0.ld
examples/thingy/src/: main.c  mesh.c  mesh_ui.c
models/simple_on_off/include/: simple_on_off_server.h
models/simple_on_off/src/: simple_on_off_server.c
